<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAE8E0"
        android:gravity="center">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Circular Image View  -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userDetails_CIMG_userCircularImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_bordered_view"
                android:elevation="100dp"
                android:src="@drawable/ic_no_picture"
                app:civ_border_color="#D6D6D6"
                app:civ_border_width="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/userDetails_BTN_uploadImage"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/aloevera"
                android:text="Upload Image"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:backgroundTint="#B6E2D3"
                app:elevation="10dp"
                app:icon="@drawable/ic_file_upload"
                app:iconTint="@color/black" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/enterName_LBL_enterUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aloevera"
                android:text="@string/please_enter_username"
                android:textColor="@color/black"
                android:textSize="25sp">

            </com.google.android.material.textview.MaterialTextView>

            <EditText
                android:id="@+id/userDetails_TF_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:fontFamily="@font/aloevera"
                android:hint="@string/enter_username"
                android:inputType="textPersonName" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/userDetails_BTN_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userDetails_TF_username"
                android:layout_centerInParent="true"
                android:layout_marginTop="100dp"
                android:backgroundTint="#B6E2D3"
                android:fontFamily="@font/aloevera"
                android:text="@string/next"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:iconPadding="20dp"
                app:iconSize="40dp"
                app:iconTint="#9E9E9E">

            </com.google.android.material.button.MaterialButton>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>